--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.2",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-redux": "^9.2.0",
+    "react-select": "^5.10.2",
     "typescript": "^4.9.5",
+    "vite": "^7.2.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
